# collate

./: Cargo.toml  README.md
src/: complex.rs  lib.rs  range.rs  stream.rs
src/stream/: diff.rs  merge.rs  mod.rs  try_diff.rs  try_merge.rs
