[package]
name = "collate"
version = "0.2.4"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Traits and a data structure to support collation and bisection"
repository = "http://github.com/haydnv/collate"
readme = "README.md"

categories = ["algorithms", "rust-patterns"]
keywords = ["collation", "bisect"]

[features]
complex = ["num-complex"]

[dependencies]
num-complex = { version = "0.2", optional = true }
