[package]
name = "collate"
version = "0.2.4"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Traits and a data structure to support collation and bisection"
repository = "http://github.com/haydnv/collate"
readme = "README.md"

categories = ["algorithms", "rust-patterns"]
keywords = ["collation", "bisect"]

[features]
all = ["logging", "stream"]
logging = ["log"]
stream = ["futures", "pin-project"]

[dependencies]
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
pin-project = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.26", features = ["macros", "rt"] }
