[package]
name = "collate"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Traits and a data structure to support collation and bisection"
repository = "http://github.com/haydnv/collate"
readme = "README.md"

categories = ["algorithms", "rust-patterns"]
keywords = ["collation", "bisect"]

[features]
stream = ["futures", "pin-project"]

[dependencies]
futures = { version = "0.3", optional = true }
pin-project = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.33", features = ["macros", "rt"] }
